added command line arguments. id user by fingerprint now. in the process of fixing networking but it's not working yet. its been a full week so just recording progress before i get too far off

--- a/README
+++ b/README
@@ -4,6 +4,7 @@ Install
 	This is not really usable, but it's getting there.
 
 Todo
+- always take most recent vote
 
 - identify laws in some unique manner
 
