--- a/README
+++ b/README
@@ -8,9 +8,9 @@ Todo
 
 - identify laws in some unique manner
 
-- ask for new laws/citizens when we receive votes for/by unknown laws/citizens 
+- ask for new law data when we receive votes for unknown laws
 
-- how do we decide if a citizen is allowed to vote in this governing body?(if for nothing else than to limit to 1 unit of voting power per person)
+- how do we decide if a citizen is allowed to vote in this governing body?(if for nothing else than to limit to 1 unit of voting power per person). solve this
 
 - better networking
 	- p2p
@@ -18,7 +18,12 @@ Todo
 - proxy voting	
 - tagging laws by issue/interest
 
+- ui overhaul (horrible is too generous of a word)
+
 Done
+- request citizen pubkey/info when we receive votes by unknown citizens 
+- needed command line flags
+- default user & other config
 - identify citizens by fingerprint/some other unique id instead of name
 - clean up gpg stuff, 
 	add config to set gpg binary/key storage path
